Add rule to gitignore regarding tmpro

--- a/.gitignore
+++ b/.gitignore
@@ -381,6 +381,9 @@ FodyWeavers.xsd
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
+# TextMesh Pro files
+[Aa]ssets/TextMesh*Pro/
+
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
 
